# scentmatch

./: .gitignore  README.md  app.py  langgraph.json  pyproject.toml
locales/: en.json  id.json
pages/: page_home.py  page_lucky.py  styles.css
products/: 3 Wishes.txt  3 Wishes_id.txt  Mahsuri.txt  Mahsuri_id.txt  Orchid_en.txt  Orchid_id.txt  Spirit I.txt  Spirit II_en.txt  Spirit II_id.txt  Spirit I_id.txt  Violet_en.txt  Violet_id.txt  desktop.ini  lavender_en.txt  lavender_id.txt  qa_data.py  rose.txt  rose_id.txt  sales_prompt.txt  sandalwood.txt  sandalwood_id.txt
products/prompts/: chat_prompt.txt  chat_prompt_en.txt  chat_prompt_id.txt  location.txt  location_en.txt  location_id.txt  sales_prompt.txt
src/scentmatch/: configuration.py  graph.py  nodes.py  state.py  translator.py
