[project]
name = "scentmatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.6",
    "langgraph>=0.5.1",
    "streamlit>=1.46.1",
]

[dependency-groups]
dev = [
    "langgraph-api>=0.2.78",
    "langgraph-cli>=0.3.3",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scentmatch"]

[tool.setuptools.package-dir]
"scentmatch" = "src/scentmatch"